static/css/style.css
/* General */

.row {
  margin: 0 auto;
}

body {
  font-family: "Montserrat", sans-serif;
}

section {
  background-color: white;
}

.noshow {
  display: none;
}

.btn,
.btn-large {
  margin: 10px;
}

.btn-large {
  width: 80%;
}

ul {
  margin: 0;
}

h5, span {
  font-size: 22px !important
}

/* Header/Navbar */
nav {
  position: fixed;
  top: 0;
  z-index: 100;
}

.nav-space {
  margin-top: 64px;
  padding: 5px
}

.brand-logo,
.hero-title {
  font-family: "Indie Flower", cursive;
}

.brand-logo {
  font-size: 28px !important;
  height: 64px !important;
  margin: 0 auto;
}

.brand-logo-image {
  height: 64px;
  width: auto;
  margin: 0 10px;
}

.sidenav {
  width: 50vw;
}

.sidenav-icon {
  margin: 0 !important;
  margin-right: 5px !important;
}

.sidenav li a {
  padding: 0;
  padding-left: 15px;
}

.sidenav-logo {
  margin: 0 auto;
  width: 80%;
  height: auto;
}

/* Form Styles */

.contact-form input,
.contact-form textarea {
  color: white;
}

.contact-form button {
  width: 50%;
  margin: 0px 0px 15px 0px;
}

.switch label input[type="checkbox"]:checked + .lever {
  background-color: #924abee7;
}

.switch label input[type="checkbox"]:checked + .lever:after {
  background-color: #6a1b9a;
}

#tc {
  opacity: 100% !important;
  position: relative
}

/* Alert */

.alert-error {
  padding: 8px;
  background-color: #fff3cd;
  color: #856404;
  border-color: #ffeeba;
  border-radius: 0.25rem;
  border: 1px solid transparent;
  margin: 5px auto;
}

/* Hero/Pick Your Stlye */

.hero,
.pick-your-style {
  height: calc(100vh - 64px);
}

.hero-title {
  font-size: 100px;
  line-height: 60px;
}

#hero-video {
  width: 100%;
  height: 100vh;
  object-fit: cover;
  position: fixed;
  left: 0px;
  top: 0px;
  z-index: -1;
}

.hero-content {
  position: relative;
  top: 20vh;
}

.hero-content h1,
.hero-content h3 {
  line-height: 1.5;
  margin: 0 auto;
}

.today-link {
  position: relative;
  top: 30vh;
}

.pick-your-style {
  background-color: #cccccc;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

#salsa-picker {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.7) 0%,
      rgba(0, 0, 0, 0.7) 100%
    ),
    url("https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/adrian-y-anita-1.jpg");
}

#bachata-picker {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.7) 0%,
      rgba(0, 0, 0, 0.7) 100%
    ),
    url("https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/ataca-y-la-alemana-1-snipped.jpg");
}

#kizomba-picker {
  background-image: linear-gradient(
      to bottom,
      rgba(0, 0, 0, 0.7) 0%,
      rgba(0, 0, 0, 0.7) 100%
    ),
    url("https://dance-your-way-event-images.s3.eu-central-1.amazonaws.com/lokito-y-oksana-1-snipped.jpg");
}

.pick-your-style h2 {
  position: relative;
  top: 33%;
}

.events-button {
  position: relative;
  top: 40%;
}

/* Card Details */

.card {
  height: 520px;
}

.smallcard {
  height: 100%;
}

.card i {
  line-height: 40px !important;
}

.card-image {
  height: 200px;
}

.card-image img,
.smallcard-image {
  height: 100%;
  width: auto;
  object-fit: cover;
}

.smallcard-image {
  height: 175px;
}

.smallcard-image img {
  width: 100%;
}

.card-content {
  padding: 0 24px 24px 24px !important;
}

.card-reveal {
  background-color: #cccccc;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  color: white;
  padding: 12px !important;
}

/* Organiser Profile Styles */

.profile-image,
.small-profile-image {
  width: 150px;
  height: 150px;
  object-fit: cover;
  border-radius: 50%;
  display: block;
  margin: 10px auto;
}

.small-profile-image {
  width: 10vw;
  height: 10vw;
  margin: auto;
}

.profile-information-container {
  width: 100%;
}

.profile-location {
  width: 100%;
}

/* Map */

#map {
  height: 400px;
  width: 100%;
}

/* Screen Responsiveness */

@media only screen and (max-width: 1200px) {
  nav ul li a {
    font-size: 11px;
  }
}

@media only screen and (max-width: 950px) {
  h1 {
    font-size: 4.2vw;
  }
  .small-profile-image {
    width: 90px;
    height: 90px;
  }
}

@media only screen and (max-width: 600px) {
  .hero,
  .pick-your-style {
    height: calc(100vh - 56px);
    top: -180px;
  }
  .hero {
    position: relative;
  }

  .brand-logo {
    font-size: 25px !important;
  }

  .hero-title {
    margin-bottom: 50px;
  }

  .today-link {
    top: 20vh;
  }
}

@media only screen and (max-width: 400px) {
  .brand-logo {
    font-size: 5vw !important;
  }
  h5 {
    font-size: 3vw !important;
  }
}

